# autumn

./: CMakeLists.txt
demo/: main.cpp
include/autumn/: config.h  log.h
src/: alog.h  assembler.cpp  assembler.h  assembler_task.cpp  assembler_task.h  base_task.cpp  base_task.h  business_task.cpp  business_task.h  compress_task.cpp  compress_task.h  encrypt_task.cpp  encrypt_task.h  file_queue.cpp  file_queue.h  file_writer.cpp  file_writer.h  format_task.cpp  format_task.h  inner_log.h  log.cpp  log_def.h  log_files.cpp  log_files.h  logger.cpp  logger.h  stream_task.cpp  stream_task.h  task.h  task_assembler.cpp  task_assembler.h  task_bridge.cpp  task_bridge.h  task_context.cpp  task_context.h  task_listener.h  utils.cpp  utils.h  write_task.cpp  write_task.h
src/task/: compress.cpp  compress.h  compress_task.cpp  compress_task.h  encrypt.cpp  encrypt.h  encrypt_task.cpp  encrypt_task.h  format.cpp  format.h  format_task.cpp  format_task.h  stream.cpp  stream.h  stream_task.cpp  stream_task.h  write.cpp  write.h  write_task.cpp  write_task.h
src/utils/: inner_log.h  utils.cpp  utils.h
src/writer/: console.cpp  console.h  console_writer.cpp  console_writer.h  file.cpp  file.h  file_writer.cpp  file_writer.h  hook.cpp  hook.h  hook_writer.cpp  hook_writer.h  log_files.cpp  log_files.h  mmap.cpp  mmap.h
